# DemoServer

唤灵战记服务器/CommonLibrary/: CommonLibrary.sln
唤灵战记服务器/CommonLibrary/LoggerZ/: LoggerZ.cpp  LoggerZ.h  LoggerZ.vcxproj  LoggerZ.vcxproj.filters
唤灵战记服务器/CommonLibrary/NetworkZ/: ASIO.cpp  ASIO.h  NetworkZ.cpp  NetworkZ.h  NetworkZ.vcxproj  NetworkZ.vcxproj.filters  PerIO.cpp  PerIO.h  dllmain.cpp  stdafx.cpp  stdafx.h
唤灵战记服务器/CommonLibrary/Test/: Test.cpp  Test.vcxproj  Test.vcxproj.filters  stdafx.h
唤灵战记服务器/ServerGroupZ/: ServerGroupZ.sln  sql语句.sql
唤灵战记服务器/ServerGroupZ/AgentServer/: AgentServer.cpp  AgentServer.h  AgentServer.vcxproj  AgentServer.vcxproj.filters  main.cpp  stdafx.h
唤灵战记服务器/ServerGroupZ/BattleModule/: Battle.cpp  Battle.h  BattleDefine.h  BattleManager.cpp  BattleManager.h  BattleModule.vcxproj  BattleModule.vcxproj.filters  BattleObject.cpp  BattleObject.h  Buff.cpp  Buff.h  BuffTP.cpp  BuffTP.h  Building.cpp  Building.h  Bullet.cpp  Bullet.h  BulletTP.cpp  BulletTP.h  CustomBullet.cpp  CustomBullet.h  EditMap.cpp  EditMap.h  Gate.cpp  Gate.h  Hero.cpp  Hero.h  Incident.cpp  Incident.h  Master.cpp  Master.h  ProtoPackage.cpp  ProtoPackage.h  StageBattle.cpp  StageBattle.h  Unit.cpp  Unit.h  battle_header.h  stdafx.cpp  stdafx.h
唤灵战记服务器/ServerGroupZ/BattleServer/: BattleServer.cpp  BattleServer.h  BattleServer.vcxproj  BattleServer.vcxproj.filters  main.cpp  stdafx.h
唤灵战记服务器/ServerGroupZ/FlashPolicy/: FlashPolicy.cpp  FlashPolicy.h  FlashPolicy.vcxproj  FlashPolicy.vcxproj.filters  main.cpp  stdafx.h
唤灵战记服务器/ServerGroupZ/GameServer/: Army.cpp  Army.h  Equip.cpp  Equip.h  GameDefine.h  GameServer.cpp  GameServer.h  GameServer.vcxproj  GameServer.vcxproj.filters  GameWorld.cpp  (+41 more)
战舰服务器/: CMakeLists.txt  README.txt  init.sh  make.bat
战舰服务器/AuthServer/: CMakeLists.txt  config.cpp  main.cpp  message_loop.cpp  server.cpp  server.h
战舰服务器/CenterServer/: CMakeLists.txt  config.cpp  config.h  coral_sea.cpp  coral_sea.h  http_handler.cpp  http_handler.h  http_handler_pay.cpp  legion_war.cpp  legion_war.h  main.cpp  message_handler.cpp  message_handler.h  message_loop.cpp  other_player.cpp  pk.cpp  pk.h  server.cpp  server.h
战舰服务器/HttpServer/: HttpServer.sln  make.bat
战舰服务器/HttpServer/HttpServer/: Codec.cs  HttpServer.csproj  Program.cs  packages.config  parse.py
战舰服务器/HttpServer/HttpServer/Properties/: AssemblyInfo.cs
战舰服务器/HttpServer/HttpServer/SDK/: Atomic.cs  Logger.cs  OnceFlag.cs  Platform.cs  RefValue.cs  Singleton.cs  TypeInstance.cs
战舰服务器/HttpServer/HttpServer/SDK/Net/: Codec.cs  ConnManager.cs  Constant.cs  Ext.cs  MessageDefine.cs  MessageHandler.cs  Server.cs
战舰服务器/LogicServer/: CMakeLists.txt  army.cpp  army.h  config.cpp  config.h  define.h  item.cpp  item.h  legion_war.cpp  legion_war.h  logic_player.cpp  logic_player.h  main.cpp  message_handler.cpp  message_handler.h  message_loop.cpp  pk.cpp  pk.h  rank_list.cpp  rank_list.h  server.cpp  server.h  test.h  time_activity.cpp  time_activity.h  tokens.cpp  tokens.h
战舰服务器/RecordServer/: CMakeLists.txt  callback.h  config.cpp  config.h  item.h  message_handler.cpp  message_handler.h  message_loop.cpp  record_player.cpp  record_player.h  server.cpp  server.h
战舰服务器/message/: CMakeLists.txt  decoding.cpp  decoding.h  message_factory.cpp  message_factory.h  parse.py
战舰服务器/message/message/: message.proto  server_message.proto
战舰服务器/sql/: auth_db.sql  update.sql  zhanjian.sql  zhanjian_gm.sql  zhanjian_log.sql
战舰服务器/tools/py/: after12.sh  before12.sh  clear_server.py  copy_server.py  correction_player.py  daemon_server.py  daily_log.py  delete_daily_log.py  dump_item.py  gm_function.py  gm_run.py  min5.sh  mysql_config.py  new_server.py  reload_config.py  server_info.py  server_list.py  stat_army.py  stat_copy.py  stat_currency.py  stat_currency_in_stock.py  stat_day_pay_info.py  stat_day_recharge.py  stat_deadman_copy.py  stat_distribution.py  stat_equip.py  stat_fighting.py  stat_item.py  stat_item_in_stock.py  stat_level.py  stat_ltv.py  stat_mission.py  stat_new_guy.py  stat_new_player.py  stat_new_ship.py  stat_player_recharge.py  stat_recharge_award.py  stat_research_item.py  stat_roll_server.py  stat_ship.py  (+8 more)
(+137 files in other folders)
